[package]
name = "p2p-client"
version = "0.1.0"
edition = "2024"

[[example]]
name = "watch-demo"
path = "examples/watch.rs"

[dependencies]
nakamoto-cash = { git = "https://github.com/samrock5000/nakamoto"  }
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
argh = "0.1.12"
crossbeam-channel = { version = "0.5.6" }
[dev-dependencies]
# p2p-client = { path = ".." }
murmur3 = { git = "https://github.com/stusmall/murmur3" }
rand = "0.8.5"
bit-vec = "0.8.0"
thiserror = "1.0.61"


