[package]
name = "watch-demo"
version = "0.1.0"
edition = "2024"


[build-dependencies]
slint-build = "1.10.0"

[dependencies]
nakamoto-cash = {version = "0.4.1", git = "https://github.com/samrock5000/nakamoto-cash"  }
# nakamoto-cash = { path = "../../nakamoto-cash"  }
log = { version = "0.4", features = ["std"] }
thiserror = "1.0.61"
chrono = { version = "0.4", features = ["std"], default-features = false }
argh = "0.1.12"
crossbeam-channel = { version = "0.5.6" }
slint = { version = "1.10.0" }
murmur3 = { git = "https://github.com/stusmall/murmur3" }
rand = "0.8.5"
bit-vec = "0.8.0"
hex = "0.4.3"
arboard = "3.4.1"
